--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,23 @@
 name: flutter_image_test_utils
-description: Provides an easier and simple way to test flutter network images
-homepage: https://github.com/WillACosta/flutter_image_test_utils
-version: 1.0.0
+description: Provides an easier and simple way to test flutter network images.
 license: MIT
+version: 1.0.1
+
 repository: https://github.com/WillACosta/flutter_image_test_utils
 issue_tracker: https://github.com/WillACosta/flutter_image_test_utils/issues
+homepage: https://github.com/WillACosta/flutter_image_test_utils
+documentation: https://github.com/WillACosta/flutter_image_test_utils
+
+topics:
+  - widget-tests
+  - flutter
+  - network-image
 
 environment:
-  sdk: ">=3.3.1 <4.0.0"
+  sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
   mocktail: ^1.0.3
+
+dev_dependencies:
+  flutter_lints: ^6.0.0
